Changed dokka output directory, rebuilt html doc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,3 +69,10 @@ tasks.withType(dokkaHtml.getClass()).configureEach {
             ["org.jetbrains.dokka.base.DokkaBase": """{ "separateInheritedMembers": true}"""]
     )
 }
+tasks.dokkaJavadoc.configure {
+    outputDirectory.set(file("../docs/"))
+}
+
+tasks.dokkaHtml.configure {
+    outputDirectory.set(file("../docs/"))
+}
